2001-07-10  Katsuhiro Hermit Endo <hermit@koka-in.org>

	* texi/gnus-ja.texi (Mail Group Commands): Fix a slight mistake.

2001-07-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el: Add the parent directory of the directory
	where the APEL modules are installed to `load-path' according to
	the description of the file Mule23@1934.

2001-07-04  Yair Friedman  <yairfr@Amdocs.com>

	* make.bat: Use infohack.el to create info files.

2001-07-09  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* README.semi: Modify URI of emacs-w3m.
	* README.semi.ja: Ditto.
	* Mule23@1934.en: Ditto.
	* Mule23@1934.ja: Ditto.
	* lisp/nnshimbun.el: Ditto.

	* texi/gnus-ja.texi (Top, Article Treatment): Fix typo.
	(Web Newspaper): Modify URI of emacs-w3m.

2001-07-06  KITAGAWA Takurou  <i30x1641@ip.media.kyoto-u.ac.jp>

	* lisp/Makefile.in (clever): Use `if test... then' instead of
	`test... &&'.

2001-07-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/Makefile.in (clever): Change the quoting style for the
	elisp form to check for XEmacs-p.

	* lisp/dgnushack.el: Require `path-util' first, and then search
	for the path if it is not found.

2001-07-05  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

2001-06-28  Akitada Koyama  <cx2@kh.rim.or.jp>

	* texi/gnus-ja.texi (Web Newspaper): Add a description how to show
	html documents inline.

2001-06-28  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/message-ja.texi (message-suspend-font-lock-when-citing): Add
	a description.
	* texi/message.texi (message-suspend-font-lock-when-citing): Ditto.

	* lisp/message.el (message-yank-original): Suspend font-lock'ing
	while citing an original message.
	(message-suspend-font-lock-when-citing): New user option.

2001-06-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-clfns.el (find-cl-run-time-functions): New
	implementation.

2001-06-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (article-display-x-face): Don't gather X-Face